--- a/src/templates/partials/favicons.hbs
+++ b/src/templates/partials/favicons.hbs
@@ -1,5 +1,2 @@
-    <link href="//cdn4.bethel.edu/images/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180"/>
-    <link href="//cdn4.bethel.edu/images/favicon-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
-    <meta content="#da532c" name="msapplication-TileColor"/>
-    <meta content="//cdn4.bethel.edu/images/mstile-150x150.png" name="msapplication-TileImage"/>
-    <link href="//cdn4.bethel.edu/images/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="//cdn4.bethel.edu/images/favicon-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
+<link href="https://cdn4.bethel.edu/images/favicon.ico" rel="icon" type="image/x-icon"/>
