updating image hover styles and adding online section to scss

--- a/src/scss/enhance/_image-hover.scss
+++ b/src/scss/enhance/_image-hover.scss
@@ -11,7 +11,13 @@
 
 .hover-effect img {
 	position: relative;
-	display: block;}
+	display: block;
+	height: 100%;
+
+	@include respond-min($medium){
+		height: auto;
+	}
+}
 
 .hover-effect figcaption {
 	padding: 7%;
