--- a/src/scss/school/_school__navigation.scss
+++ b/src/scss/school/_school__navigation.scss
@@ -25,7 +25,7 @@
     // display: table-cell;
     font-size: 1em;
     // font-family: $sentinel;
-    // font-weight: 700;
+    font-weight: 700;
     white-space: nowrap;
     line-height: 1.5;
     // padding: 0 .5em;
