--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -7,6 +7,7 @@ layout: default
 
     {{!-- {{> proof-points }} --}}
     {{!-- {{> quotes }} --}}
+    {{> hover-img }}
     {{!-- <img src="//fillmurray.com/800/350"> --}}   
 
     <div class="grid">
