--- a/src/scss/modules/_moving-picture.scss
+++ b/src/scss/modules/_moving-picture.scss
@@ -1,26 +1,28 @@
-.slick-carousel{
 
 .moving-picture {
 	position: relative;
-	background-color: #000;
-	height: 415px;
+// 	background-color: #000;
+// 	height: 415px;
+// 	min-width: 100%;
+// 	width: 100%;
 	
+// 	@include respond-min(830px){
+// 		height: auto;
+// 		display: table;
+// 		display: block;
+// 	// }
+
 	@include respond-min(830px){
-		height: auto;
-		display: table;
+		max-height: 75vh;
 	}
 
-	@include respond-min(1200px){
-		max-height: 80vh;
-	}
+// 	@media screen and (min-width: 1200px) and (max-height: 850px){
+// 		display: block;
+// 	}
 
-	@media screen and (min-width: 1200px) and (max-height: 850px){
-		display: block;
-	}
-
-	@include respond-min(1600px){
-		display: block;
-	}
+// 	@include respond-min(1600px){
+// 		display: block;
+// 	}
 }
 
 .moving-picture:before {
@@ -32,34 +34,71 @@
         bottom: 0;
         left: 0;
         background-image: linear-gradient(to bottom,transparent 35%,#000);
-        opacity: .8;
+        opacity: 1;
         z-index: 1; 
       }
  }
 
 .moving-picture__media {
-	position: absolute;
-	top:0;
-	bottom:0;
-	left: 0;
-	right: 0;
-	overflow: hidden;
-	width: 100%;
+	// position: relative;
+	// position: absolute;
+	// top:0;
+	// bottom:0;
+	// left: 0;
+	// right: 0;
+	// overflow: hidden;
+	// width: 100%;
+		height: 415px;
 
 	@include respond-min(830px){
 		position: relative;
-		display: inline-block;
+		// display: inline-block;
+		// height: auto;
+		// max-height: 75vh;
+				// position: relative;
+		padding-bottom: 56%;
+		height: 0;
 	}
+
+		// @include respond-min(830px){
+		// 	height: auto;
+		// 	// display: table;
+		// 	// display: block;
+		// // }
+
+		// // @include respond-min(1200px){
+		// 	max-height: 75vh;
+		// }
+
+		// @media screen and (min-width: 1200px) and (max-height: 850px){
+		// 	display: block;
+		// }
+
+		// @include respond-min(1600px){
+		// 	display: block;
+		// }
 }
 
+
+// .intrinsic {
+// 	@include respond-min(830px){
+// 		position: relative;
+// 		padding-bottom: 56%;
+// 		height: 0;
+// 		max-height: 75vh;
+// 	}
+// }
+
+.moving-picture__media picture,
 .moving-picture__media picture img {
-	height: 100%;
+	// height: 100%;
 	width: auto;
-	// bottom: 0;
+	// // // bottom: 0;
 	position: absolute;
 	max-width: none;
 	top: 0;
 	right: 0;
+	height: 415px;
 
 	@include respond-min(830px){
 		height: auto;
@@ -109,7 +148,7 @@
 }
 .moving-picture__overlay__teaser {
 	display: none;
-	text-rendering: geometricPrecision;
+	// text-rendering: geometricPrecision;
 	margin-top: .75em;
 
 	@include respond-min($large){
@@ -132,5 +171,4 @@
 	@include respond-min($medium){
 		margin-top: .5em;
 	}
-}
 }
