removing height 100% from image hover

--- a/src/scss/modules/_section--home.scss
+++ b/src/scss/modules/_section--home.scss
@@ -91,7 +91,7 @@
 }
 
 .section--home__online {
-	background: url("//cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/online/images/online-study.jpg");
+	background: url("https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/online/images/study-online.jpg");
 	background-size: cover;
-	background-position: center;	
+	background-position: right center;	
 }
