--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -12,7 +12,7 @@
                     <!--[if IE 9]></video><![endif]-->
                     <img
                             {{!-- src="{{ this.baseImg }}" --}}
-                            {{!-- class="lazyload" --}}
+                            class="lazyload"
                             alt="image with artdirection"
                             data-sizes="auto"
                     />
