--- a/src/scss/modules/_moving-picture.scss
+++ b/src/scss/modules/_moving-picture.scss
@@ -14,6 +14,7 @@
 
 	@include respond-min(830px){
 		max-height: 75vh;
+		overflow: hidden;
 	}
 
 // 	@media screen and (min-width: 1200px) and (max-height: 850px){
