removing top margin from .main first-child header

--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -7,17 +7,20 @@ layout: default
 
     {{!-- {{> proof-points }} --}}
     {{!-- {{> quotes }} --}}
-    {{> hover-img }}
-    {{!-- <img src="//fillmurray.com/800/350"> --}}   
+    {{!-- {{> hover-img }} --}}
+    <img src="//fillmurray.com/800/350">   
 
+
+    <section class="grid-section">
     <div class="grid">
         <div class="grid-cell u-medium-1-2">
             <div class="medium-grid-pad-1x">{{> news }}</div>
         </div>
-{{!--         <div class="grid-cell">
+        <div class="grid-cell">
             <div class="medium-grid-pad-1x">{{> events }}</div>
-        </div> --}}
+        </div>
     </div>
+    </section>
     
     <p>Bethel University is a top-ranked, evangelical Christian university based in St. Paul, Minnesota.</p>
     <h2>Our Students</h2>
