--- a/src/scss/typography/_typography.scss
+++ b/src/scss/typography/_typography.scss
@@ -64,6 +64,12 @@ h3 {
 	// margin-bottom: 0;
 }
 
+// Removes top margin from first header in .main
+.main h2:first-child,
+.main h3:first-child  {
+  margin-top: 0;
+}
+
 p:first-child {
 	margin-top: 0;
 }
