--- a/src/scss/enhance/_off-canvas--main.scss
+++ b/src/scss/enhance/_off-canvas--main.scss
@@ -103,7 +103,7 @@
     backface-visibility: hidden;
   }
 
-  .js-openGlobalNav .inner-wrap--global__navigation {
+  .js.js-openGlobalNav .inner-wrap--global__navigation {
     transform: translate3d(-18em, 0, 0);
   }
 }
