--- a/src/templates/partials/global--school.hbs
+++ b/src/templates/partials/global--school.hbs
@@ -9,6 +9,7 @@
                  <li><a href="http://www.bethel.edu/admissions/">Adult Undergrad</a></li>
                  <li><a href="http://cas.bethel.edu/student-life/">Graduate</a></li>
                  <li><a href="http://www.bethel.edu/faith/">Seminary</a></li>
+                 <li><a href="http://www.bethel.edu/faith/">Online</a></li>
             </ul>
         </nav>
 
