--- a/src/templates/partials/table.hbs
+++ b/src/templates/partials/table.hbs
@@ -1,45 +1,279 @@
+<table class="responsive">
+		<thead>
+		<tr>
+				<th valign="top">
+				<p align="center"><strong>Course Title</strong></p>
+				</th>
+		<th valign="top" >
+				<p align="center"><strong>Status</strong></p>
+				</th>
+				<th valign="top" >
+				<p align="center"><strong>Semester<br>
+					Credits</strong></p>
+					</th>
+					<th valign="top" >
+					<p align="center"><strong>Course No.</strong></p>
+					</th>
+					<th valign="top">
+					<p align="center"><strong>Bethel Course Equivalent</strong></p>
+					</th>
+			</tr>
+			</thead>
+				<tbody>
+					<tr>
+						<td valign="top" >
+							<p align="center">&nbsp;YL Core</p>
+						</td>
+						<td valign="top">
+							<p>Introduction to Youth Ministry</p>
+						</td>
+						<td valign="top" >
+							<p align="center">&nbsp;3</p>
+						</td>
+						<td valign="top" >
+							<p align="center">&nbsp;DC635YL*</p>
+						</td>
+						<td valign="top">
+							<p>DC Elective</p>
+						</td>
+					</tr>
+			<tr>
+				<td valign="top" >
+					<p align="center">&nbsp;YL Core</p>
+				</td>
+				<td valign="top">
+					<p>Leadership I:&nbsp; Foundations for Incarnational Youth Ministry</p>
+				</td>
+				<td valign="top" >
+					<p align="center">&nbsp;3</p>
+				</td>
+				<td valign="top" >
+					<p align="center">ML612YL*</p>
+				</td>
+				<td valign="top">
+					<p>Leadership I/<br>
+						SP or ML Elective</p>
+					</td>
+				</tr>
+				<tr>
+					<td valign="top" >
+						<p align="center">&nbsp;YL Core</p>
+					</td>
+					<td valign="top">
+						<p>Leadership II: Incarnational Discipleship of Young People</p>
+					</td>
+					<td valign="top" >
+						<p align="center">3</p>
+					</td>
+					<td valign="top" >
+						<p align="center">ML613YL*</p>
+					</td>
+					<td valign="top">
+						<p>Leadership II/<br>
+							ML Elective</p>
+						</td>
+					</tr>
+					<tr>
+						<td valign="top" >
+							<p align="center">&nbsp;YL Core</p>
+						</td>
+						<td valign="top">
+							<p>The Minister as Person</p>
+						</td>
+						<td valign="top" >
+							<p align="center">3</p>
+						</td>
+						<td valign="top" >
+							<p align="center">PC607YL*</p>
+						</td>
+						<td valign="top">
+							<p>PC Elective</p>
+						</td>
+					</tr>
+					<tr>
+						<td valign="top" >
+							<p align="center">&nbsp;YL Core</p>
+						</td>
+						<td valign="top">
+							<p>Systematic Theology I: Theology and Anthropology</p>
+						</td>
+						<td valign="top" >
+							<p align="center">3</p>
+						</td>
+						<td valign="top" >
+							<p align="center">TS512YL</p>
+						</td>
+						<td valign="top">
+							<p>Systematic Theology I/<br>
+								TS512</p>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top" >
+								<p align="center">YL Core</p>
+							</td>
+							<td valign="top">
+								<p>Gospels and Acts</p>
+							</td>
+							<td valign="top" >
+								<p align="center">3</p>
+							</td>
+							<td valign="top" >
+								<p align="center">NT516YL</p>
+							</td>
+							<td valign="top">
+								<p>NT516</p>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top" >
+								<p align="center">Cont. Ed.</p>
+							</td>
+							<td valign="top">
+								<p>Youth Ministry Leadership and Community Development</p>
+							</td>
+							<td valign="top" >
+								<p align="center">3</p>
+							</td>
+							<td valign="top" >
+								<p align="center">DC637YL</p>
+							</td>
+							<td valign="top">
+								<p>DC Elective</p>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top" >
+								<p align="center">&nbsp;Cont. Ed.</p>
+							</td>
+							<td valign="top">
+								<p>The Kingdom of God and Cultural Intelligence</p>
+							</td>
+							<td valign="top" >
+								<p align="center">3</p>
+							</td>
+							<td valign="top" >
+								<p align="center">GC618YL</p>
+							</td>
+							<td valign="top">
+								<p>GC Elective</p>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top" >
+								<p align="center">&nbsp;Cont. Ed.</p>
+							</td>
+							<td valign="top">
+								<p>Equipping Leaders who Volunteer</p>
+							</td>
+							<td valign="top" >
+								<p align="center">3</p>
+							</td>
+							<td valign="top" >
+								<p align="center">ML620YL</p>
+							</td>
+							<td valign="top">
+								<p>DC Elective</p>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top" >
+								<p align="center">Cont. Ed.</p>
+							</td>
+							<td valign="top">
+								<p>Supervision and Organizational Leadership</p>
+							</td>
+							<td valign="top" >
+								<p align="center">3</p>
+							</td>
+							<td valign="top" >
+								<p align="center">ML615YL</p>
+							</td>
+							<td valign="top">
+								<p>ML Elective</p>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top" >
+								<p align="center">Cont. Ed.</p>
+							</td>
+							<td valign="top">
+								<p>Old Testament Introduction</p>
+							</td>
+							<td valign="top" >
+								<p align="center">3</p>
+							</td>
+							<td valign="top" >
+								<p align="center">OT516YL</p>
+							</td>
+							<td valign="top">
+								<p>OT Elective</p>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top" >
+								<p align="center">Cont. Ed.</p>
+							</td>
+							<td valign="top">
+								<p>Christology, Soteriology, Pneumatology&nbsp;</p>
+							</td>
+							<td valign="top" >
+								<p align="center">3</p>
+							</td>
+							<td valign="top" >
+								<p align="center">TS613YL</p>
+							</td>
+							<td valign="top">
+								<p>TS Elective</p>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+
 <table border="0" class="responsive">
-<tbody>
-<tr>
-<th scope="col">
-</th><th scope="col">Direct Unsubsidized Loans</th>
-<th scope="col">Direct PLUS Loans</th>
-<th scope="col">Private Loans</th>
-</tr>
-<tr>
-<th scope="rowgroup">Fees</th>
-<td>
-<p>1.051% (after 7/1/2013)</p>
-</td>
-<td>
-<p>4.204% (after 7/1/2013)</p>
-</td>
-<td>Varies</td>
-</tr>
-<tr>
-<th scope="rowgroup">Make payments while in school?</th>
-<td>Interest accrues. Optional in-school payment.</td>
-<td>Yes</td>
-<td>Yes</td>
-</tr>
-<tr>
-<th scope="rowgroup">Interest rate</th>
-<td>5.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
-<td>6.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
-<td>Varies</td>
-</tr>
-<tr>
-<th scope="rowgroup">Repayment</th>
-<td>10 years</td>
-<td>10 years</td>
-<td>Varies (10+<br>
- years)</td>
-</tr>
-<tr>
-<th scope="rowgroup">More info</th>
-<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#unsub">Unsubsidized Loans</a></td>
-<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#grad-plus">PLUS Loans</a></td>
-<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#private">Private Loans</a></td>
-</tr>
-</tbody>
-</table>
+	<thead class="cf">
+		<tr>
+			<th scope="col">
+			</th><th scope="col">Direct Unsubsidized Loans</th>
+			<th scope="col">Direct PLUS Loans</th>
+			<th scope="col">Private Loans</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+		<td>Fees</th>
+			<td>
+				<p>1.051% (after 7/1/2013)</p>
+			</td>
+			<td>
+				<p>4.204% (after 7/1/2013)</p>
+			</td>
+			<td>Varies</td>
+		</tr>
+		<tr>
+		<td>Make payments while in school?</th>
+			<td>Interest accrues. Optional in-school payment.</td>
+			<td>Yes</td>
+			<td>Yes</td>
+		</tr>
+		<tr>
+		<td>Interest rate</th>
+			<td>5.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
+			<td>6.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
+			<td>Varies</td>
+		</tr>
+		<tr>
+		<td>Repayment</th>
+			<td>10 years</td>
+			<td>10 years</td>
+			<td>Varies (10+<br>
+				years)</td>
+			</tr>
+			<tr>
+			<td>More info</th>
+				<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#unsub">Unsubsidized Loans</a></td>
+				<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#grad-plus">PLUS Loans</a></td>
+				<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#private">Private Loans</a></td>
+			</tr>
+		</tbody>
+	</table>
