--- a/src/scss/base/_tables.scss
+++ b/src/scss/base/_tables.scss
@@ -1,10 +1,64 @@
 table {
   width: 100%;
-  font-size: 90%; }
+  font-size: 90%; 
+  margin-bottom: 1em;
+}
 
-table td, table th {
+table td, 
+table th {
   padding: .7em;
-  border: 1px solid #ddd; }
+  border: 1px solid #d8d8d8; 
+}
+
+table th {
+	 font-weight: bold;
+	 text-align: left;
+	 background: #e8e8e8;
+}
+
+
+
+table.responsive { 
+  margin: 0 auto;
+  border-collapse: collapse;
+  // background: #333; 
+  // color: #fff;
+}
+table.responsive caption { 
+  // font-size: 2rem; color: #444;
+  // margin: 1rem;
+}
+table.responsive thead th { }
+table.responsive thead th, table.responsive tbody td { 
+  // padding: .8rem; font-size: 1.4rem;
+}
+table.responsive tbody td { 
+  // padding: .8rem; font-size: 1.4rem;
+  // color: #444; background: #eee; 
+}
+table.responsive tbody tr:not(:last-child) { 
+  // border-top: 1px solid #ddd;
+  // border-bottom: 1px solid #ddd;  
+}
+
+@media screen and (max-width: 600px) {
+  table.responsive thead { 
+  	display: none; 
+  }
+  table.responsive tbody td { 
+    display: block; padding: .6rem; 
+  }
+  table.responsive tbody tr td:first-child { 
+    background: #e8e8e8; 
+    // color: #fff; 
+  }
+	table.responsive tbody td:before { 
+    content: attr(data-th); 
+    font-weight: bold;
+    display: inline-block;
+    width: 6rem;  
+  }
+}
 
 
 .majors-table {
@@ -73,43 +127,4 @@ table td, table th {
 		text-decoration: none;
 
 	}
-}
-
-/* Foundation v2.1.4 http://foundation.zurb.com */
-/* Artfully masterminded by ZURB  */
-
-/* -------------------------------------------------- 
-   Table of Contents
------------------------------------------------------
-:: Shared Styles
-:: Page Name 1
-:: Page Name 2
-*/
-
-
-/* -----------------------------------------
-   Shared Styles
------------------------------------------ */
-
-table th { font-weight: bold; background-color: #e8e8e8; }
-table td, table th { padding: 9px 10px; text-align: left; }
-
-/* Mobile */
-@media only screen and (max-width: 767px) {
-	
-	table.responsive { margin-bottom: 0; }
-	
-	.pinned { position: absolute; left: 0; top: 0; background: #fff; width: 35%; overflow: hidden; overflow-x: scroll; border-right: 1px solid #ccc; border-left: 1px solid #ccc; }
-	.pinned table { border-right: none; border-left: none; width: 100%; }
-	.pinned table th, .pinned table td { white-space: nowrap; }
-	.pinned td:last-child { border-bottom: 0; }
-	
-	div.table-wrapper { position: relative; margin-bottom: 20px; overflow: hidden; border-right: 1px solid #ccc; }
-	div.table-wrapper div.scrollable { margin-left: 35%; }
-	div.table-wrapper div.scrollable { overflow: scroll; overflow-y: hidden; }	
-	
-	table.responsive td, table.responsive th { position: relative; white-space: nowrap; overflow: hidden; }
-	table.responsive th:first-child, table.responsive td:first-child, table.responsive td:first-child, table.responsive.pinned td { display: none; }
-	
-	
 }
