--- a/src/scss/site/_site__image-bank.scss
+++ b/src/scss/site/_site__image-bank.scss
@@ -6,7 +6,7 @@
 	// left: 0;
 	overflow: hidden;
 	// max-width: 75em;
-	margin: 0 auto;
+	margin: 0 auto 2em;
 	// text-align: center;
 	max-width: 75em;
 	max-height: 250px;
