--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -20,12 +20,12 @@ layout:default
 		{{!-- {{> school__navigation }} --}}
 
 		{{!-- {{> carousel }} --}}
-		{{> moving-picture }}
+		{{!-- {{> moving-picture }} --}}
 
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
-		<div class="inner--content  margins-off">
+		<div class="inner--content">
 		    <div class="inner-wrap--site__navigation" id="js-inner-wrap--site__navigation">
 
 		    	{{> site__navigation }}
