--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -7,8 +7,8 @@ layout: default
 
     {{!-- {{> proof-points }} --}}
     {{!-- {{> quotes }} --}}
-    {{!-- {{> hover-img }} --}}
-    <img src="//fillmurray.com/800/350">   
+    {{> table }}
+    {{!-- <img src="//fillmurray.com/800/350">    --}}
 
 
     <section class="grid-section">
