--- a/src/templates/partials/global__header.hbs
+++ b/src/templates/partials/global__header.hbs
@@ -10,6 +10,7 @@
                      <li><a class="active"  href="http://www.bethel.edu/admissions/">Adult Undergrad</a></li>
                      <li><a href="http://cas.bethel.edu/student-life/">Graduate</a></li>
                      <li><a href="http://www.bethel.edu/faith/">Seminary</a></li>
+                     <li><a href="https://www.bethel.edu/academics/online">Online</a></li>
                 </ul>
             </nav>
 
